# SimTeach

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  build.sh  compile_commands.json  main.cpp  run.bat
app/: main.cpp
include/: Behaviour.hpp  DataReference.cpp  DataReference.hpp  Debug.hpp  Edge.hpp  EntityManager.hpp  GUI.hpp  Graph.cpp  Graph.hpp  GraphMananager.hpp  GraphReference.cpp  GraphReference.hpp  ImguiHelpers.hpp  Matrix.hpp  NewPolygon.hpp  Point.hpp  Polygon.hpp  RingBuffer.hpp  Sim.hpp  Spring.hpp  Tool.hpp  Util.hpp  Vector2.hpp  Visualizers.hpp
include/Fundamentals/: Vector2.hpp
include/Tools/: GraphTool.cpp  GraphTool.hpp  PointTool.cpp  PointTool.hpp  PolyTool.cpp  PolyTool.hpp  SpringTool.cpp  SpringTool.hpp  Tool.hpp  Tools.cpp  Tools.hpp
include/tools/: GraphTool.cpp  PointTool.cpp  PolyTool.cpp  SpringTool.cpp  Tools.hpp
presets/: Bouncy.csv  DoublePend.csv  Empty.csv  SoftBody.csv
